--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,14 @@
+buildscript {      // Configuration for building
+	repositories {
+		jcenter()      // Bintray's repository - a fast Maven Central mirror & more
+		mavenCentral()
+	}
+	dependencies {
+		classpath 'com.google.cloud.tools:appengine-gradle-plugin:2.5.0'
+		classpath 'org.akhikhl.gretty:gretty:+'
+	}
+}
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.0'
@@ -13,7 +24,10 @@ java {
 
 repositories {
 	mavenCentral()
+	jcenter()
 }
+
+apply plugin: 'com.google.cloud.tools.appengine'
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
@@ -27,4 +41,11 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+appengine {
+	deploy {   // deploy configuration
+		stopPreviousVersion = true  // default - stop the current version
+		promote = true              // default - & make this the current version
+	}
 }
